--- a/src/main/resources/templates/product-detail.html
+++ b/src/main/resources/templates/product-detail.html
@@ -113,7 +113,7 @@
                     </div>
 
                     <div class="total-price">
-                        Total Price: <span id="totalPrice" th:text="${product.price} + ' USD'"></span>
+                        Total Price: <span id="totalPrice" th:text="${product.price} + 'K VND'"></span>
                     </div>
 
                     <button type="submit" class="btn">Add to Cart</button>
