--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -11,6 +11,7 @@
             <a class="btn btn-primary" href="/products">Continue Shopping</a>
         </div>
         <div th:unless="${#lists.isEmpty(cart.cartItems)}">
+
             <!--            <form method="post" th:action="@{/cart/updateAll}">-->
             <!--                <table class="table">-->
             <!--                    <thead>-->
@@ -26,22 +27,25 @@
             <!--                    <tbody>-->
             <!--                    <tr th:each="item : ${cart.cartItems}">-->
             <!--                        <td th:text="${item.product.name}"></td>-->
-            <!--                        <td><img th:src="@{${item.product.imagePath}}" alt="Product Image">-->
+            <!--                        <td><img th:src="@{${item.product.imagePath}}" alt="Product Image" width="100" height="125">-->
             <!--                        </td>-->
             <!--                        <td th:text="${item.price}"></td>-->
-            <!--                        <td>-->
-            <!--                            <input type="hidden" name="cartItemId" th:value="${item.id}">-->
-            <!--                            <input type="hidden" name="cartId" th:value="${item.id.cart_id}">-->
-            <!--                            <input type="hidden" name="productId" th:value="${item.id.product_id}">-->
-            <!--                            <input type="number" name="quantity" th:value="${item.quantity}" min="1"-->
-            <!--                                   class="form-control">-->
-            <!--                        </td>-->
+            <!--                        <td><input type="number"-->
+            <!--                                   th:name="'quantity_' + ${item.product.id}"-->
+            <!--                                   th:value="${item.quantity}"-->
+            <!--                                   min="1"-->
+            <!--                                   class="form-control"></td>-->
             <!--                        <td th:text="${item.price.multiply(item.quantity)}"></td>-->
             <!--                        <td>-->
             <!--                            <form method="post" th:action="@{/cart/remove}">-->
-            <!--                                <input type="hidden" name="cartItemId" th:value="${item.id}">-->
-            <!--                                <input type="hidden" name="cartId" th:value="${item.id.cart_id}">-->
-            <!--                                <input type="hidden" name="productId" th:value="${item.id.product_id}">-->
+            <!--                                <input type="hidden" th:name="cartItemId"-->
+            <!--                                       th:value="${item.id}">-->
+            <!--                                <input-->
+            <!--                                        type="hidden" th:name="cartId"-->
+            <!--                                        th:value="${item.id.cart_id}">-->
+            <!--                                <input type="hidden"-->
+            <!--                                       th:name="productId"-->
+            <!--                                       th:value="${item.product.id}">-->
             <!--                                <button type="submit" class="btn btn-sm btn-danger">Remove</button>-->
             <!--                            </form>-->
             <!--                        </td>-->
@@ -73,39 +77,44 @@
                     <tbody>
                     <tr th:each="item : ${cart.cartItems}">
                         <td th:text="${item.product.name}"></td>
-                        <td><img th:src="@{${item.product.imagePath}}" alt="Product Image" width="100" height="125">
+                        <td>
+                            <img th:src="@{${item.product.imagePath}}" alt="Product Image"
+                                 style="width: 50px; height: 50px;">
                         </td>
                         <td th:text="${item.price}"></td>
-                        <td><input type="number"
+                        <td>
+                            <input type="number" class="form-control"
                                    th:name="'quantity_' + ${item.product.id}"
                                    th:value="${item.quantity}"
-                                   min="1"
-                                   class="form-control"></td>
-                        <td th:text="${item.price.multiply(item.quantity)}"></td>
+                                   min="1">
+                        </td>
+                        <td th:text="${item.quantity * item.price}"></td>
                         <td>
                             <form method="post" th:action="@{/cart/remove}">
-                                <input type="hidden" th:name="cartItemId"
-                                       th:value="${item.id}">
-                                <input
-                                        type="hidden" th:name="cartId"
-                                        th:value="${item.id.cart_id}">
-                                <input type="hidden"
-                                       th:name="productId"
-                                       th:value="${item.product.id}">
-                                <button type="submit" class="btn btn-sm btn-danger">Remove</button>
+                                <input type="hidden" name="cartId" th:value="${item.id.cart_id}">
+                                <input type="hidden" name="productId" th:value="${item.id.product_id}">
+                                <button type="submit" class="btn btn-danger">Remove</button>
                             </form>
                         </td>
                     </tr>
                     </tbody>
                     <tfoot>
                     <tr>
-                        <td colspan="4">Total:</td>
-                        <td th:text="${cart.totalPrice}"></td>
-                        <td></td>
+                        <td colspan="4" class="text-end">Total:</td>
+                        <td colspan="2" th:text="${cart.totalPrice}"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="5">
+                            <button type="submit" class="btn btn-primary">Update Cart</button>
+                        </td>
+                        <td colspan="1">
+                            <form method="post" th:action="@{/cart/removeAll}">
+                                <button type="submit" class="btn btn-danger">Remove All</button>
+                            </form>
+                        </td>
                     </tr>
                     </tfoot>
                 </table>
-                <button type="submit" class="btn btn-sm btn-success">Update Cart</button>
             </form>
 
             <div class="d-flex justify-content-between mt-3">
