--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,76 +3,56 @@
 
 <!-- Fragment Footer -->
 
-  <section th:fragment="footer">
+<section th:fragment="footer">
     <footer class="site-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-            <div class="block-7">
-              <h3 class="footer-heading mb-4">Về chúng tôi</h3>
-              <p>HPharmacy is the best pharmacy.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
+                    <div class="block-7">
+                        <h3 class="footer-heading mb-4">Về chúng tôi</h3>
+                        <p>HPharmacy is the best pharmacy.</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
+                    <h3 class="footer-heading mb-4">Các đường liên kết nhanh</h3>
+                    <ul class="list-unstyled">
+                        <li><a th:href="@{/}">Home</a></li>
+                        <li><a th:href="@{/products}">Shop</a></li>
+                        <li><a th:href="@{/about}">About us</a></li>
+                        <li><a th:href="@{/cart}">Your cart</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="block-5 mb-5">
+                        <h3 class="footer-heading mb-4">Thông tin liên hệ</h3>
+                        <ul class="list-unstyled">
+                            <li class="address">KDC 30, đường Nguyễn Văn Linh, Hưng Lợi, Ninh Kiều, Tp. Cần Thơ</li>
+                            <li class="phone"><a href="#">+84 0768893383</a></li>
+                            <li class="email">hoangb2111842@student.ctu.edu.vn</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-          </div>
-
-
-          <!-- <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
-            <h3 class="footer-heading mb-4">Quick Links</h3>
-            <ul class="list-unstyled">
-              <li><a href="#">Supplements</a></li>
-              <li><a href="#">Vitamins</a></li>
-              <li><a href="#">Diet &amp; Nutrition</a></li>
-              <li><a href="#">Tea &amp; Coffee</a></li>
-            </ul>
-          </div>
-
-          <div class="col-md-6 col-lg-3">
-            <div class="block-5 mb-5">
-              <h3 class="footer-heading mb-4">Contact Info</h3>
-              <ul class="list-unstyled">
-                <li class="address">203 Fake St. Mountain View, San Francisco, California, USA</li>
-                <li class="phone"><a href="tel://23923929210">+2 392 3929 210</a></li>
-                <li class="email">emailaddress@domain.com</li>
-              </ul>
-            </div>      Template-->
-
-
-          <div class="col-lg-3 mx-auto mb-5 mb-lg-0">
-            <h3 class="footer-heading mb-4">Các đường liên kết nhanh</h3>
-            <ul class="list-unstyled">
-              <li><a th:href="@{/supplements}">Supplements</a></li>
-              <li><a th:href="@{/vitamins}">Vitamins</a></li>
-              <li><a th:href="@{/diet-nutrition}">Diet &amp; Nutrition</a></li>
-              <li><a th:href="@{/tea-coffee}">Tea &amp; Coffee</a></li>
-            </ul>
-          </div>
-
-          <div class="col-md-6 col-lg-3">
-            <div class="block-5 mb-5">
-              <h3 class="footer-heading mb-4">Thông tin liên hệ</h3>
-              <ul class="list-unstyled">
-                <li class="address">KDC 30, đường Nguyễn Văn Linh, Hưng Lợi, Ninh Kiều, Tp. Cần Thơ</li>
-                <li class="phone"><a href="#">+84 0768893383</a></li>
-                <li class="email">hoangb2111842@student.ctu.edu.vn</li>
-              </ul>
+            <div class="row pt-5 mt-5 text-center">
+                <div class="col-md-12">
+                    <p>
+                        <!-- Thông tin về bản quyền và ghi chú -->
+                        Copyright &copy;
+                        <script>document.write(new Date().getFullYear());</script>
+                        All rights reserved | This
+                        template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="#"
+                                                                                                  target="_blank"
+                                                                                                  class="text-primary">HPharmacy</a>
+                    </p>
+                </div>
             </div>
-          </div>
         </div>
-        <div class="row pt-5 mt-5 text-center">
-          <div class="col-md-12">
-            <p>
-              <!-- Thông tin về bản quyền và ghi chú -->
-              Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-              template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="#" target="_blank"
-                class="text-primary">HPharmacy</a>
-            </p>
-          </div>
-        </div>
-      </div>
     </footer>
 
     <!-- Các file JavaScript -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
     <script th:src="@{/js/jquery-ui.js}"></script>
     <script th:src="@{/js/popper.min.js}"></script>
@@ -81,6 +61,6 @@
     <script th:src="@{/js/jquery.magnific-popup.min.js}"></script>
     <script th:src="@{/js/aos.js}"></script>
     <script th:src="@{/js/main.js}"></script>
-  </section>
+</section>
 
 </html>
