--- a/src/main/resources/templates/products/management.html
+++ b/src/main/resources/templates/products/management.html
@@ -119,7 +119,7 @@
         </div>
     </table>
 
-    <div class="d-flex justify-content-center mt-3">
+    <div class="d-flex justify-content-center mt-3" th:if="${!products.content.isEmpty()}">
         <ul class="pagination">
             <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">
                 <a class="page-link" th:href="@{/products/management(page=1)}">Đầu</a>
