--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -232,6 +232,7 @@ form.d-flex div {
                                 <!--                                <p class="price" th:text="${#numbers.formatDecimal(product.price, 2, 2)} + 'K VND'"></p>-->
                                 <form method="POST" th:action="@{/cart/add}">
                                     <input type="hidden" name="productId" th:value="${product.id}">
+                                    <input type="hidden" name="quantity" value="1">
                                     <button type="submit" class="btn btn-primary">Add to Cart</button>
                                 </form>
                             </a>
@@ -244,7 +245,7 @@ form.d-flex div {
                     <div th:if="${message}" class="alert alert-success" th:text="${message}"></div>
                 </div>
 
-                <div class="d-flex justify-content-center mt-3">
+                <div class="d-flex justify-content-center mt-3" th:if="${!products.content.isEmpty()}">
                     <ul class="pagination">
                         <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">
                             <a class="page-link" th:href="@{/products(page=1)}">Đầu</a>
